tests/positive/QualifiedImports/Main.juvix
module Main;

import Stdlib.Prelude as Prelude;

main : Prelude.Nat;
main := 123;
