tests/negative/PragmasFormat.juvix
module PragmasFormat;

import Stdlib.Prelude open;

{-# inline: Tre #-}
main : Nat := 0;
